# data-science-toolkit

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  Titanic_Excel_Dashboard_Project.xlsx  build_and_push.sh  config.yaml  example_usage.py  inference.py  main.py  pyproject.toml  streamlit_app.py  titanic.yaml
docs/: mkdocs.yml
docs/docs/: index.md
mlartifacts/509309430285857086/d8685fa9fd8c4b718fa32fa2be47d1ea/artifacts/models/: MLmodel  conda.yaml  input_example.json  model.pkl  python_env.yaml  requirements.txt  serving_input_example.json
mlruns/0/: meta.yaml
mlruns/509309430285857086/: meta.yaml
mlruns/509309430285857086/d8685fa9fd8c4b718fa32fa2be47d1ea/: meta.yaml
mlruns/509309430285857086/d8685fa9fd8c4b718fa32fa2be47d1ea/metrics/: accuracy  precision_0  precision_1  recall_0  recall_1  roc_auc
mlruns/509309430285857086/d8685fa9fd8c4b718fa32fa2be47d1ea/tags/: mlflow.log-model.history  mlflow.runName  mlflow.source.git.commit
mlruns/models/random_forest/: meta.yaml
mlruns/models/random_forest/version-1/: meta.yaml
mlruns/models/random_forest/version-2/: meta.yaml
models/: random_forest.pkl  random_forest.pkl.pkl
notebooks/: test.ipynb
reports/figures/: summary_statistics.txt
reports/random_forest/: evaluation_report.json
scripts/: fastapi.sh  handle docker.sh  run_streamlit.sh  setup_project.sh
src/: __init__.py  config.py  data_models.py  dataset.py  evaluate.py  features.py  globals.py  inference.py  logger.py  plots.py  preprocessor.py  saver.py  tracking.py  training.py
