[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "src"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "Fady Adel and Nadia Moustafa" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
dependencies = [
    "hydra-core>=1.3.2",
    "loguru",
    "mkdocs",
    "pip",
    "scikit-learn>=1.6.1",
    "pandas>=2.2.3",
    "python-dotenv",
    "skore>=0.8.3",
    "ruff",
    "tqdm",
    "typer",
    "seaborn>=0.13.2",
    "mlflow>=2.22.0",
    "fastapi[standard]>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.5.0",
    "python-multipart>=0.0.6",
    "requests>=2.31.0",
]
requires-python = "~=3.11.0"


[tool.ruff]
line-length = 99
src = ["src"]
include = ["pyproject.toml", "src/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["src"]
force-sort-within-sections = true

